Final Course Project

--- a/PML_CourseProject.html
+++ b/PML_CourseProject.html
@@ -829,7 +829,7 @@ conf_mat3$table</code></pre>
 result</code></pre>
 <pre><code>##  [1] B A B A A E D B A A B C B A E E A B B B
 ## Levels: A B C D E</code></pre>
-<p>This <em>result</em> will be used to answer the quiz.</p>
+<p>This <em>result</em> will be used to answer the quiz for the course.</p>
 </div>
 </div>
 
