Final Course project with added changes

--- a/PML_CourseProject.html
+++ b/PML_CourseProject.html
@@ -820,6 +820,7 @@ conf_mat3$table</code></pre>
 <pre><code>##  Accuracy 
 ## 0.9643161</code></pre>
 <p>So the accuracy is 0.9643161</p>
+<p>The accuracy rate using the random forest is very high <em>out-of-sample-error is equal to 0.0264</em>.</p>
 </div>
 </div>
 <div id="predicting-the-validation-data-with-the-best-model" class="section level2">
